{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 264,
  "lineage": "fb378b7c-840b-a704-b92f-a8339485cc86",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397732282:loadbalancer/app/myapp-load-balancer/dc20da4c542ef20f",
            "arn_suffix": "app/myapp-load-balancer/dc20da4c542ef20f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "myapp-load-balancer-1351560816.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397732282:loadbalancer/app/myapp-load-balancer/dc20da4c542ef20f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-078e74b72f3a5f62e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03edaf81454500fa3"
              },
              {
                "subnet_id": "subnet-0ed59dfc2ce3783ff"
              }
            ],
            "subnets": [
              "subnet-03edaf81454500fa3",
              "subnet-0ed59dfc2ce3783ff"
            ],
            "vpc_id": "vpc-02c88d52505abb73b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397732282:listener/app/myapp-load-balancer/dc20da4c542ef20f/9d51f614cec1b9b2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397732282:targetgroup/myapp-target-group/6224ffd11352a907",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397732282:listener/app/myapp-load-balancer/dc20da4c542ef20f/9d51f614cec1b9b2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397732282:loadbalancer/app/myapp-load-balancer/dc20da4c542ef20f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.app",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397732282:targetgroup/myapp-target-group/6224ffd11352a907",
            "arn_suffix": "targetgroup/myapp-target-group/6224ffd11352a907",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397732282:targetgroup/myapp-target-group/6224ffd11352a907",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "myapp-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02c88d52505abb73b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07eed6561d5067c00",
            "arn": "arn:aws:ec2:ap-southeast-1:767397732282:elastic-ip/eipalloc-07eed6561d5067c00",
            "domain": "vpc",
            "id": "eipalloc-07eed6561d5067c00",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-54-255-116-252.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.116.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d46c0007f7cbd20c",
            "arn": "arn:aws:ec2:ap-southeast-1:767397732282:elastic-ip/eipalloc-0d46c0007f7cbd20c",
            "domain": "vpc",
            "id": "eipalloc-0d46c0007f7cbd20c",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-228-143-192.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.143.192",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397732282:internet-gateway/igw-0cdf49f94dc5aa13e",
            "id": "igw-0cdf49f94dc5aa13e",
            "owner_id": "767397732282",
            "vpc_id": "vpc-02c88d52505abb73b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07eed6561d5067c00",
            "association_id": "eipassoc-06c6765369a91e01e",
            "connectivity_type": "public",
            "id": "nat-045296f6240f4e3ea",
            "network_interface_id": "eni-0aadea1787b923f75",
            "private_ip": "172.17.2.56",
            "public_ip": "54.255.116.252",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03edaf81454500fa3"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d46c0007f7cbd20c",
            "association_id": "eipassoc-0306e51a4a940f5af",
            "connectivity_type": "public",
            "id": "nat-01b29c17b7d20ffdd",
            "network_interface_id": "eni-0f576eb4f2e2f43de",
            "private_ip": "172.17.3.25",
            "public_ip": "13.228.143.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ed59dfc2ce3783ff"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cdf49f94dc5aa13e",
            "id": "r-rtb-092488b87ad77a4831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-092488b87ad77a483",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397732282:route-table/rtb-01251fac06b387af1",
            "id": "rtb-01251fac06b387af1",
            "owner_id": "767397732282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-045296f6240f4e3ea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c88d52505abb73b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397732282:route-table/rtb-0e90b84e795cf188e",
            "id": "rtb-0e90b84e795cf188e",
            "owner_id": "767397732282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01b29c17b7d20ffdd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c88d52505abb73b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0621987637dfb2195",
            "route_table_id": "rtb-01251fac06b387af1",
            "subnet_id": "subnet-07920118d1a4dcd8f"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0339b8897d654df61",
            "route_table_id": "rtb-0e90b84e795cf188e",
            "subnet_id": "subnet-069b8f8261d769ee0"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397732282:security-group/sg-041ab6d6b840bc4f6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041ab6d6b840bc4f6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-078e74b72f3a5f62e"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "myapp-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "767397732282",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c88d52505abb73b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397732282:security-group/sg-078e74b72f3a5f62e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078e74b72f3a5f62e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myapp-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "767397732282",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c88d52505abb73b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397732282:subnet/subnet-07920118d1a4dcd8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.17.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07920118d1a4dcd8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397732282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02c88d52505abb73b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397732282:subnet/subnet-069b8f8261d769ee0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069b8f8261d769ee0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397732282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02c88d52505abb73b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397732282:subnet/subnet-03edaf81454500fa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03edaf81454500fa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397732282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02c88d52505abb73b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397732282:subnet/subnet-0ed59dfc2ce3783ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed59dfc2ce3783ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397732282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02c88d52505abb73b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397732282:vpc/vpc-02c88d52505abb73b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0393d54ec89e39c5d",
            "default_route_table_id": "rtb-092488b87ad77a483",
            "default_security_group_id": "sg-0c64c0242ce6b315d",
            "dhcp_options_id": "dopt-0cffd8d5e553b5ee4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c88d52505abb73b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092488b87ad77a483",
            "owner_id": "767397732282"
          }
        }
      ]
    }
  ]
}